; ModuleID = '/home/carl/AnghaBench/linux/tools/lib/bpf/extr_btf.c_btf_ext_setup_func_info.c'
source_filename = "/home/carl/AnghaBench/linux/tools/lib/bpf/extr_btf.c_btf_ext_setup_func_info.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.btf_ext = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32, i32 }
%struct.btf_ext_sec_setup_param = type { i32, i8*, i32*, i32, i32 }

@.str = private unnamed_addr constant [10 x i8] c"func_info\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.btf_ext*)* @btf_ext_setup_func_info to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @btf_ext_setup_func_info(%struct.btf_ext* %0) #0 {
  %2 = alloca %struct.btf_ext*, align 8
  %3 = alloca %struct.btf_ext_sec_setup_param, align 8
  store %struct.btf_ext* %0, %struct.btf_ext** %2, align 8
  %4 = getelementptr inbounds %struct.btf_ext_sec_setup_param, %struct.btf_ext_sec_setup_param* %3, i32 0, i32 0
  store i32 4, i32* %4, align 8
  %5 = getelementptr inbounds %struct.btf_ext_sec_setup_param, %struct.btf_ext_sec_setup_param* %3, i32 0, i32 1
  store i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i8** %5, align 8
  %6 = getelementptr inbounds %struct.btf_ext_sec_setup_param, %struct.btf_ext_sec_setup_param* %3, i32 0, i32 2
  %7 = load %struct.btf_ext*, %struct.btf_ext** %2, align 8
  %8 = getelementptr inbounds %struct.btf_ext, %struct.btf_ext* %7, i32 0, i32 0
  store i32* %8, i32** %6, align 8
  %9 = getelementptr inbounds %struct.btf_ext_sec_setup_param, %struct.btf_ext_sec_setup_param* %3, i32 0, i32 3
  %10 = load %struct.btf_ext*, %struct.btf_ext** %2, align 8
  %11 = getelementptr inbounds %struct.btf_ext, %struct.btf_ext* %10, i32 0, i32 1
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  store i32 %14, i32* %9, align 8
  %15 = getelementptr inbounds %struct.btf_ext_sec_setup_param, %struct.btf_ext_sec_setup_param* %3, i32 0, i32 4
  %16 = load %struct.btf_ext*, %struct.btf_ext** %2, align 8
  %17 = getelementptr inbounds %struct.btf_ext, %struct.btf_ext* %16, i32 0, i32 1
  %18 = load %struct.TYPE_2__*, %struct.TYPE_2__** %17, align 8
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i32 0, i32 1
  %20 = load i32, i32* %19, align 4
  store i32 %20, i32* %15, align 4
  %21 = load %struct.btf_ext*, %struct.btf_ext** %2, align 8
  %22 = call i32 @btf_ext_setup_info(%struct.btf_ext* %21, %struct.btf_ext_sec_setup_param* %3)
  ret i32 %22
}

declare dso_local i32 @btf_ext_setup_info(%struct.btf_ext*, %struct.btf_ext_sec_setup_param*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
